err/july3.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/july3'...
Listing './lib/python3.5/site-packages/july3/contrib'...
Listing './lib/python3.5/site-packages/july3/contrib/django'...
Compiling './lib/python3.5/site-packages/july3/contrib/file.py'...
***   File "./lib/python3.5/site-packages/july3/contrib/file.py", line 37
    return sh(f'type {self.target}', capture=True).returncode == 0
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/july3/contrib/python.py'...
***   File "./lib/python3.5/site-packages/july3/contrib/python.py", line 32
    pip(f'install {packages}', pip=rule.pip, virtualenv=rule.virtualenv, sudo=rule.sudo)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/july3/rule.py'...
***   File "./lib/python3.5/site-packages/july3/rule.py", line 35
    raise TargetNotFound(f'{target_name} not found.\nAvaiable targets:\n{target_names}')
                                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/july3/util.py'...
***   File "./lib/python3.5/site-packages/july3/util.py", line 17
    command = f'{sudo_cmd(sudo)} {command}'
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/july3-0.0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spec'...
Compiling './lib/python3.5/site-packages/spec/test_rule.py'...
***   File "./lib/python3.5/site-packages/spec/test_rule.py", line 26
    @Rule(f'test-build/{env.project_name}', dependencies=['files/nginx-site.mako', 'test-build'])
                                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
